# pyproject_template

./: .gitignore  environment.yml  pyproject.toml  readme.md
docs/: conf.py  index.md
